# CSSE4011-PROJECT

./: README.md  gui.py  m5stack.ino
code/zephyr_env/mycode/apps/base/: CMakeLists.txt  README.rst  app.overlay  prj.conf
code/zephyr_env/mycode/apps/base/boards/: nucleo_l073rz.overlay
code/zephyr_env/mycode/apps/base/dts/bindings/: ir.yaml
code/zephyr_env/mycode/apps/base/src/: HCI.c  HCI.h  LED.c  LED.h  ble.c  ble.h  cam.c  cam.h  gcu.c  gcu.h  ir.c  ir.h  log.c  log.h  main.c  timer.c  timer.h
images/: 4011-poster.pptx
m5stack/: m5stack.ino
